testa comparator